--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.jpg",
+              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
