--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "ng-sidebar": "^9.2.0",
     "ngx-lightbox": "^2.1.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
